--- a/needle/templates/cross/index.html
+++ b/needle/templates/cross/index.html
@@ -2,5 +2,34 @@
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
 <h1> Стартовая</h1>
+    {% for kit in page_obj %}
+<article>
+  <span>
+  <ul>
+     <li>
+     Дата публикации: {{ kit.created|date:"d E Y" }}
+    </li>
+    <li>
+      Дизайн: {{ kit.title }}
+    </li>
+    <li>
+      Описание: {{ kit.description }}
+    </li>
+    <li>
+      Дизайнер: {{ kit.author }}
+    </li>
+    <li>
+      Кто завел на сайте: {{ kit.creator }}
+    </li>
+    <li>
+     Дата создания дизайна: {{ kit.design_created_year|date:"d E Y" }}
+    </li>
+    <li>
+     Всего крестиков: {{ kit.total_crosses }}
+    </li>
+  </ul>
+  </span>
+</article>
+    {% endfor %}
 {% include 'includes/paginator.html' %}
 {% endblock %}
