--- a/needle/templates/cross/profile.html
+++ b/needle/templates/cross/profile.html
@@ -8,7 +8,7 @@
     <p>{{ progress.modified }}</p>
     <p>Вышито крестиков за день: {{ progress.crosses_done }}</p>
     <p>Всего крестиков {{ progress.kit.total_crosses }}</p>
-    <p>Осталось крестиков {{  }}</p>
+    <p>Осталось крестиков </p>
 
   {% endfor %}
 </li>
