add link to admin on startup page, start use pandas

--- a/needle/templates/cross/index.html
+++ b/needle/templates/cross/index.html
@@ -2,9 +2,9 @@
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
 <h1> Стартовая</h1>
-<a class="custom_link" href="{% url 'cross:kit_list' %}">Список наборов</a>
-          <a href="{% url 'cross:profile' user.username %}">
-            профиль
-          </a>
+<p><a href="{% url 'admin:index' %}">Админка</a></p>
+<p><a class="custom_link" href="{% url 'cross:kit_list' %}">Список наборов</a></p>
+<p><a href="{% url 'cross:profile' user.username %}">Профиль</a></p>
+
 {% include 'includes/paginator.html' %}
 {% endblock %}
