--- a/needle/templates/cross/kit_list.html
+++ b/needle/templates/cross/kit_list.html
@@ -2,16 +2,16 @@
 {% block title %}Все наборы{% endblock %}
 {% block content %}
 <h1> Список наборов </h1>
-    {% for kit in page_obj %}
+{% for kit in page_obj %}
 <article>
   <ul>
     <li>
-      Название набора: «{{ kit.title }}»
+      Название набора: «{{ kit.name }}» {% if kit.designer %} (Дизайнер {{ kit.designer }}) {% endif %}
               <a class="custom_link" href="{% url 'cross:kit_detail' kit.slug %}">Подробнее</a>
     </li>
   </ul>
   </span>
 </article>
-    {% endfor %}
+{% endfor %}
 {% include 'includes/paginator.html' %}
 {% endblock %}
